# FreeCad_MCP_Server

./: .gitignore  README.md  claude_desktop_config.example.json  pyproject.toml
examples/: MountainBike.FCStd  Werkbank.FCStd
freecad_addon/: Init.py  InitGui.py
freecad_addon/freecad_ai_bridge/: __init__.py  gui_executor.py  operations.py  part_ops.py  partdesign_ops.py  rpc_server.py  security.py  sketcher_ops.py  view_ops.py
models/: Bungalow_mit_Pool.20260523-150030.FCBak  Bungalow_mit_Pool.FCStd  _check_fem.py  _debug_fem.py  _debug_fem2.py  _debug_fem3.py  _debug_fem4.py  _debug_fem5.py  _debug_fem6.py  _debug_fem7.py  balkenschuh_typ_a1.py  bungalow_mit_pool.py  bungalow_mit_pool_v2.py  fahrrad_sitz.py  fahrrad_sitz_freecad.py  gehaeuse_asb_aussen_rgb.py  mcp_test_fem.py  mountainbike.py  take_screenshot.py  werkbank.py
models/fem_output/: kragarm.frd  kragarm.inp  sattel.frd  sattel.inp  sattel_mesh.json  sattel_result.json
src/freecad_mcp/: __init__.py  connection.py  server.py
src/freecad_mcp/tools/: __init__.py
